--- a/package.json
+++ b/package.json
@@ -6,10 +6,31 @@
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "format": "prettier . --cache",
+    "format:fix": "yarn format --write",
+    "format:check": "yarn format --check",
+    "lint": "eslint . --cache --max-warnings 0",
+    "lint:fix": "yarn lint --fix",
+    "lint:check": "yarn lint",
+    "type:check": "tsc --noEmit",
+    "prepare": "husky install"
   },
   "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "^6.1.0",
+    "@typescript-eslint/parser": "^6.1.0",
+    "eslint": "^8.45.0",
+    "eslint-config-prettier": "^8.8.0",
+    "eslint-import-resolver-typescript": "^3.5.5",
+    "eslint-plugin-import": "^2.27.5",
+    "husky": ">=6",
+    "lint-staged": ">=10",
+    "prettier": "^3.0.0",
     "typescript": "^5.0.2",
     "vite": "^4.4.5"
+  },
+  "lint-staged": {
+    "*.{js,ts}": "eslint --cache --fix --max-warnings 0",
+    "*.{js,ts,css,htm,html,md}": "prettier --cache --write"
   }
 }
